fixing the broken css in the search results exvocab

--- a/resource/css/styles.css
+++ b/resource/css/styles.css
@@ -1964,7 +1964,7 @@ body, .versal, h1, h2, p, .versal-bold {
     font-size: 27px !important;
   }
 
-  li, .versal, .versal-bold, p, .search-result > .prefLabel, .search-result > .notation {
+  li, .versal, .versal-bold, p, .search-result > .prefLabel, .search-result > .notation, .property-values > .prefLabel {
     font-size: 16px !important;
   }
 
